@@ -5,7 +5,7 @@
  * To learn more about CSS visit http: //www.w3.org/TR/REC-CSS2/
  *
  * phpGedView: Genealogy Viewer
- * Copyright (C) 2002 to 2008 John Finlay and Others
+ * Copyright (C) 2002 to 2008 John Finlay and Others, all rights reserved.
  *
  * This program is free software; you can redistribute it and/or modify
  * it under the terms of the GNU General Public License as published by
@@ -459,6 +459,11 @@ a:hover .nameZoom {
 
 .age {
 	font-size: 9px;
+}
+
+.maternaldeath {
+	border: thin solid grey;
+	padding: 1px;
 }
 
 .source_citations {
