@@ -10,7 +10,9 @@
 
 
 Version 4.1.5
- - Added: Option to show estimated birth/death dates on indi lists
+ - Fixed: Move "maternal-death" style to stylesheet (fisharebest)
+ - Added: Highligh fathers who die before their child is born (fisharebest)
+ - Added: Option to show estimated birth/death dates on indi lists (fisharebest)
  - Fixed [ 1939774 ] MyGedView Portal Menu Showing even for Non-Logged In Users (canajun2eh)
  - Fixed: wrong gedcom record updated when syncing email changes to gedcom (fisharebest)
  - [ 1921974 ] SVN2756 Wrong names in search list for several GEDCOMs (fisharebest)
